# RHIP

./: .gitignore  ACS Data collection.R  Cluster_Relabeling.R  DataCollection.ipynb  DataCollection_v2.ipynb  DataProcessing.ipynb  Data_Cleaning_Report.md  Data_Processing.R  Housing_Insecurity_Functions.R  README.md  RHIP.md  RSS-Analysis.ipynb  RSS-Analysis.py  RSS-Processing.py  RUCA Codes.md  Spatial_Data_Analysis.R  dev.py  docker-compose.yml  local_morans_i.R  pyproject.toml  random analysis.R  requirements.txt  search_acs.py
.agents/: AGENTS.md
.hermes/plans/: fix-housing-quality.md  jupyter-jupyterhub.md
RuralDetention/: Data Exploration.ipynb  Draft Abstract.md  Rural Detention.md
ThesisCode/: ACS Data collection.R
UrbanScience/: .gitignore  Data Exploration.ipynb  Data Exploration.md  DataExploration.ipynb  Journal Information.md  UrbanScience.md
data/: fips_codes.csv  ruca2010revised.csv  state_neighbors.csv
notebooks/: DataProcessing.ipynb
pyresearch/: setup.py
rural-detention/: Data Exploration.ipynb  Draft Abstract.md  RSS 2025_Jails Paper_v2.md  data_analysis.ipynb  data_exploration.ipynb  initial_analysis.ipynb  quarto.ipynb
tests/: test_acs_loader.py  test_acs_loader_cleaning.py
thesis-code/: Mapping.R  Plotting.R
urban-science/: Data Exploration.docx  Data Exploration.ipynb  analysis_results_diversity.txt  requirements.txt
utils/: __init__.py  acs_loader.py  acs_vars.py  data_loader.py  ers_loader.py  get_acs_data.py  pandas_patch.py  ruca.py  ruca_loader.py  test_acs_loader.py  test_data_loader.py  vira_loader.py
(+31 files in other folders)
