[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhip-utils"
version = "0.1.0"
dependencies = [
    "pandas",
    "pydantic",
    "pytidycensus",
    "requests",
    "python-dotenv",
    "numpy",
    "geopandas",
    "shapely",
    "pygris"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]
