[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhip-utils"
version = "0.1.0"
dependencies = [
    "pandas",
    "pydantic",
    "pytidycensus[map]",
    "requests",
    "python-dotenv",
    "numpy",
    "geopandas",
    "shapely",
    "pygris",
    "lonboard<0.14.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]
